@@ -99,17 +99,97 @@ namespace mwf_designer
 			}
 		}
 
+
+		private static readonly Type[] containers = new Type[] {
+			typeof (System.Windows.Forms.FlowLayoutPanel),
+			typeof (System.Windows.Forms.GroupBox),
+			typeof (System.Windows.Forms.Panel),
+			typeof (System.Windows.Forms.SplitContainer),
+			typeof (System.Windows.Forms.TabControl),
+			typeof (System.Windows.Forms.TableLayoutPanel),
+		};
+
+		private static readonly Type[] menusToolbars = new Type[] {
+			typeof (System.Windows.Forms.ContextMenuStrip),
+			typeof (System.Windows.Forms.MenuStrip),
+			typeof (System.Windows.Forms.StatusStrip),
+			typeof (System.Windows.Forms.ToolStrip),
+			typeof (System.Windows.Forms.ToolStripContainer),
+		};
+
+		private static readonly Type[] commonControls = new Type[] {
+			typeof (System.Windows.Forms.Button),
+			typeof (System.Windows.Forms.CheckBox),
+			typeof (System.Windows.Forms.CheckedListBox),
+			typeof (System.Windows.Forms.ComboBox),
+			typeof (System.Windows.Forms.DateTimePicker),
+			typeof (System.Windows.Forms.Label),
+			typeof (System.Windows.Forms.LinkLabel),
+			typeof (System.Windows.Forms.ListBox),
+			typeof (System.Windows.Forms.ListView),
+			typeof (System.Windows.Forms.MaskedTextBox),
+			typeof (System.Windows.Forms.MonthCalendar),
+			typeof (System.Windows.Forms.NotifyIcon),
+			typeof (System.Windows.Forms.NumericUpDown),
+			typeof (System.Windows.Forms.PictureBox),
+			typeof (System.Windows.Forms.ProgressBar),
+			typeof (System.Windows.Forms.RadioButton),
+			typeof (System.Windows.Forms.RichTextBox),
+			typeof (System.Windows.Forms.TextBox),
+			typeof (System.Windows.Forms.ToolTip),
+			typeof (System.Windows.Forms.TreeView),
+			typeof (System.Windows.Forms.WebBrowser),
+		};
+
+		private static readonly Type[] commonComponents = new Type[] {
+			typeof (System.ComponentModel.BackgroundWorker),
+			typeof (System.IO.FileSystemWatcher),
+			typeof (System.Diagnostics.Process),
+			typeof (System.Windows.Forms.ImageList),
+			typeof (System.Windows.Forms.HelpProvider),
+			typeof (System.IO.Ports.SerialPort),
+			typeof (System.Windows.Forms.Timer),
+		};
+
+
 		public List<ToolboxItem> GetToolboxItems ()
 		{
 			List<ToolboxItem> list = new List<ToolboxItem>();
+
 			foreach (Assembly assembly in _references.Assemblies)
 				foreach (Type type in assembly.GetTypes())
-					if (IsValidType (type) && HasValidCtor (type))
+					if (IsValidToolType (type) && HasPublicEmptyCtor (type))
 						list.Add (new ToolboxItem (type));
+
+
+			foreach (Type type in commonComponents) {
+				ToolboxItem tool = new ToolboxItem (type);
+				tool.Properties["Category"] = "Common Components";
+				list.Add (tool);
+			}
+
+			foreach (Type type in menusToolbars) {
+				ToolboxItem tool = new ToolboxItem (type);
+				tool.Properties["Category"] = "Menus and Toolbars";
+				list.Add (tool);
+			}
+
+			foreach (Type type in commonControls) {
+				ToolboxItem tool = new ToolboxItem (type);
+				tool.Properties["Category"] = "Common Controls";
+				list.Add (tool);
+			}
+
+			foreach (Type type in containers) {
+				ToolboxItem tool = new ToolboxItem (type);
+				tool.Properties["Category"] = "Containers";
+				list.Add (tool);
+			}
+
 			return list;
 		}
 
-		private bool HasValidCtor (Type type)
+		private bool HasPublicEmptyCtor (Type type)
 		{
 			bool result = false;
 			ConstructorInfo[] ctors = type.GetConstructors ();
@@ -121,10 +201,10 @@ namespace mwf_designer
 			return result;
 		}
 
-		private bool IsValidType (Type type)
+		private bool IsValidToolType (Type type)
 		{
 			ToolboxItemAttribute toolboxAttribute = TypeDescriptor.GetAttributes (type)[typeof (ToolboxItemAttribute)] as ToolboxItemAttribute;
-			if (toolboxAttribute != ToolboxItemAttribute.None &&
+			if (toolboxAttribute.ToolboxItemTypeName != ToolboxItemAttribute.None.ToolboxItemTypeName &&
 				!type.IsAbstract && !type.IsInterface &&
 				((type.Attributes & TypeAttributes.Public) == TypeAttributes.Public) && 
 				((type.Attributes & TypeAttributes.NestedFamily) != TypeAttributes.NestedFamily) && 
